; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_lex.c_token_info.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_lex.c_token_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i8* }

@token = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@TOKEN_NAME = common dso_local global i64 0, align 8
@TOKEN_KEYWORD = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @token_info() #0 {
  %1 = alloca i8*, align 8
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 0), align 8
  %3 = load i64, i64* @TOKEN_NAME, align 8
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %9, label %5

5:                                                ; preds = %0
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 0), align 8
  %7 = load i64, i64* @TOKEN_KEYWORD, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %5, %0
  %10 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 1), align 8
  store i8* %10, i8** %1, align 8
  br label %14

11:                                               ; preds = %5
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @token, i32 0, i32 0), align 8
  %13 = call i8* @token_kind_name(i64 %12)
  store i8* %13, i8** %1, align 8
  br label %14

14:                                               ; preds = %11, %9
  %15 = load i8*, i8** %1, align 8
  ret i8* %15
}

declare dso_local i8* @token_kind_name(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
